<resources>
    <string name="app_name">Opus</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>

    <string name="sign_up_create_account">Create account</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_create_account_success">Account has been created. Check your email to verify your account: %1$s</string>

    <string name="sign_in_create_account_btn">Create account</string>
    <string name="sign_in_forgot_password">Forgot password?</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_in_title">Log Into your account</string>
    <string name="sign_in_opus_logo">Opus</string>
    <string name="sign_in_exit_app">Tap again to exit the app</string>

    <string name="forgot_password_hint">Provide email</string>
    <string name="forgot_password_alert_message">Do you want to restart your password?</string>
    <string name="forgot_password_button_negative">Decline</string>
    <string name="forgot_password_button_accept">Accept</string>
    <string name="forgot_password_error_empty_field">Field cannot be empty</string>
    <string name="forgot_password_error_wrong_pattern">Wrong email pattern</string>
    <string name="forgot_password_reset_success">The reset password request has been sent. Check your email.</string>
    <string name="progress_button_text_ok">@android:string/ok</string>

    <string name="dialog_fragment_voice_title">Permission required</string>
    <string name="dialog_fragment_voice_message">Permission to access the microphone is required for this app to record audio.</string>

</resources>
