<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/forgot_password_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgot_password_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_message">

        <com.opus.common.customs.CustomEditText
            android:id="@+id/forgot_password_edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forgot_password_hint"
            android:inputType="textEmailAddress"
            android:maxLines="@integer/max_lines_1"
            android:scrollHorizontally="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot_password_button_positive"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small_8dp"
        android:text="@string/forgot_password_button_accept"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_input_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot_password_button_negative"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_button_negative"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forgot_password_button_positive"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_input_layout" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/forgot_password_progress"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forgot_password_button_negative"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>